tests/tooling/fixtures/native/recovery/negative/negative_separator_literal_parser_trailing_underscore.objc3
// Expected diagnostic code(s): O3P103.
module NegativeSeparatorLiteralParserTrailingUnderscore;

let value = 123_;

fn main() -> i32 {
  return 0;
}
